kubernetes/svc-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-front
spec:
  ports:
  - name: "3000"
    port: 3000
    protocol: TCP
    targetPort: 3000
  type: ClusterIP
  selector:
    tier: front # Importante -> Debe coincidir con label de pods a conectarse
