kubernetes/svc-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-mongodb
spec:
  ports:
  - name: "27017"
    port: 27017
    protocol: TCP
    targetPort: 27017
  type: ClusterIP
  selector:
    app: mongo
